[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/Checkout.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/GroceryStore.gd" type="Script" id=3]
[ext_resource path="res://scenes/Shelf.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/floor.png" type="Texture" id=5]
[ext_resource path="res://scenes/Flower.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/June.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Doc.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Legs.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/FoodGroup.gd" type="Script" id=10]
[ext_resource path="res://scenes/Food.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/doors.png" type="Texture" id=12]
[ext_resource path="res://sprites/grocery_bag.png" type="Texture" id=13]
[ext_resource path="res://food/BreadBun.png" type="Texture" id=14]
[ext_resource path="res://food/BreadRoll.png" type="Texture" id=15]
[ext_resource path="res://sprites/food_pile.png" type="Texture" id=16]
[ext_resource path="res://nowhere-land-by-kevin-macleod-from-filmmusic-io.ogg" type="AudioStream" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2025, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 825 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 300, 150 )

[node name="GroceryStore" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Floor" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false

[node name="TopBottom" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/TopBottom"]
position = Vector2( 2000, 0 )
shape = SubResource( 1 )

[node name="TopBottom2" type="StaticBody2D" parent="Floor"]
position = Vector2( 0, 1600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/TopBottom2"]
position = Vector2( 2000, 0 )
shape = SubResource( 1 )

[node name="LeftRight" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/LeftRight"]
position = Vector2( 0, 800 )
shape = SubResource( 2 )

[node name="LeftRight2" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/LeftRight2"]
position = Vector2( 4000, 800 )
shape = SubResource( 2 )

[node name="Doors" type="Sprite" parent="."]
position = Vector2( 287.351, -188.288 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 12 )

[node name="SortStack" type="YSort" parent="."]
position = Vector2( 0, 173.673 )
script = ExtResource( 10 )

[node name="Shelf" parent="SortStack" instance=ExtResource( 4 )]
position = Vector2( 2154.42, 273.063 )

[node name="Shelf2" parent="SortStack" instance=ExtResource( 4 )]
position = Vector2( 2154.42, 623.063 )

[node name="Shelf3" parent="SortStack" instance=ExtResource( 4 )]
position = Vector2( 2154.42, 973.063 )

[node name="Shelf5" parent="SortStack" instance=ExtResource( 4 )]
position = Vector2( 3322.17, 273.063 )

[node name="Shelf6" parent="SortStack" instance=ExtResource( 4 )]
position = Vector2( 3322.17, 623.063 )

[node name="Shelf7" parent="SortStack" instance=ExtResource( 4 )]
position = Vector2( 3322.17, 973.063 )

[node name="Flower" parent="SortStack" instance=ExtResource( 6 )]
position = Vector2( 1892.77, 1261.55 )

[node name="Legs" parent="SortStack" instance=ExtResource( 9 )]
position = Vector2( 3259.15, 432.53 )

[node name="Doc" parent="SortStack" instance=ExtResource( 8 )]
position = Vector2( 1115.25, 799.163 )

[node name="June" parent="SortStack" instance=ExtResource( 7 )]
position = Vector2( 1141.7, 373.061 )

[node name="Food" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 1800.76, 429.911 )

[node name="Food2" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 1975.76, 429.911 )

[node name="Food3" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2150.76, 429.911 )

[node name="Food4" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2325.76, 429.911 )

[node name="Food5" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2500.76, 429.911 )

[node name="Food6" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 1800.76, 778.747 )

[node name="Food7" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 1975.76, 778.747 )

[node name="Food8" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2150.76, 778.747 )

[node name="Food9" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2325.76, 778.747 )

[node name="Food10" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2500.76, 778.747 )

[node name="Food11" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 1800.76, 1128.14 )

[node name="Food12" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 1975.76, 1128.14 )

[node name="Food13" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2150.76, 1128.14 )

[node name="Food14" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2325.76, 1128.14 )

[node name="Food15" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2500.76, 1128.14 )

[node name="Food21" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2972.81, 429.911 )

[node name="Food22" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3147.81, 429.911 )

[node name="Food23" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3322.81, 429.911 )

[node name="Food24" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3497.81, 429.911 )

[node name="Food25" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3672.81, 429.911 )

[node name="Food26" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2972.81, 778.747 )

[node name="Food27" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3147.81, 778.747 )

[node name="Food28" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3322.81, 778.747 )

[node name="Food29" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3497.81, 778.747 )

[node name="Food30" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3672.81, 778.747 )

[node name="Food31" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 2972.81, 1128.14 )

[node name="Food32" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3147.81, 1128.14 )

[node name="Food33" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3322.81, 1128.14 )

[node name="Food34" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3497.81, 1128.14 )

[node name="Food35" parent="SortStack" instance=ExtResource( 11 )]
position = Vector2( 3672.81, 1128.14 )

[node name="Player" parent="SortStack" instance=ExtResource( 2 )]
position = Vector2( 250.566, -77.4814 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SortStack/Player"]
position = Vector2( -250.566, -96.1916 )
stream = ExtResource( 17 )
volume_db = -80.0
autoplay = true

[node name="AudioTween" type="Tween" parent="SortStack/Player/AudioStreamPlayer2D"]

[node name="CheckoutCounter" parent="SortStack" instance=ExtResource( 1 )]
position = Vector2( 952.5, 463.651 )

[node name="CheckoutCounter2" parent="SortStack" instance=ExtResource( 1 )]
position = Vector2( 952.5, 863.651 )

[node name="FoodPile" type="Sprite" parent="SortStack"]
position = Vector2( 2231.24, 1294.96 )
texture = ExtResource( 16 )
offset = Vector2( 0, -60 )

[node name="GroceryBagJune" type="Sprite" parent="."]
visible = false
position = Vector2( 600, 500 )
texture = ExtResource( 13 )

[node name="GroceryBagDoc" type="Sprite" parent="."]
visible = false
position = Vector2( 600, 900 )
texture = ExtResource( 13 )

[node name="BeltJune" type="Sprite" parent="."]
visible = false
position = Vector2( 1200, 540 )
scale = Vector2( 5, 5 )
texture = ExtResource( 14 )

[node name="TweenJune" type="Tween" parent="BeltJune"]

[node name="BeltDoc" type="Sprite" parent="."]
visible = false
position = Vector2( 1200, 940 )
scale = Vector2( 5, 5 )
texture = ExtResource( 15 )

[node name="TweenDoc" type="Tween" parent="BeltDoc"]

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 288.977, 145.083 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Exit" to="." method="_on_Exit_body_entered"]
